<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text15"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_horizontal"
                android:text="@string/start_journey"
                android:textColor="@color/title"
                android:textSize="@dimen/texts18" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/subtitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginBottom="@dimen/text10"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_horizontal"
                android:text="@string/already_user"
                android:textColor="@color/title"
                android:textSize="@dimen/texts18"
                android:textStyle="normal" />


            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/view_click_basement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/text20"
                android:layout_marginTop="@dimen/text40"
                android:layout_marginRight="@dimen/text20"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradients"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text30"
                        android:gravity="center"
                        android:orientation="vertical">


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text15"
                            android:theme="@style/TextLabel"
                            app:hintTextAppearance="@style/MyAppearance">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/input_firstname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/first_names"
                                android:inputType="text"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/texts14"
                                android:theme="@style/MyEditText" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text15"
                            android:theme="@style/TextLabel"
                            app:hintTextAppearance="@style/MyAppearance">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/input_middlename"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/middle_initialss"
                                android:inputType="text"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/texts14"
                                android:theme="@style/MyEditText" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text15"
                            android:theme="@style/TextLabel"
                            app:hintTextAppearance="@style/MyAppearance">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/input_lastname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/last_names"
                                android:inputType="text"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/texts14"
                                android:theme="@style/MyEditText" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text15"
                            android:theme="@style/TextLabel"
                            app:hintTextAppearance="@style/MyAppearance">

                            <com.ignovate.lectrefymob.ui.CustomEditText
                                android:id="@+id/input_dob"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableRight="@drawable/ic_calendar"
                                android:drawablePadding="@dimen/text10"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/dobs"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/texts14"
                                android:theme="@style/MyEditText" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/gender"
                            style="@style/Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text15"
                            android:drawSelectorOnTop="true"
                            android:dropDownVerticalOffset="-53dp"
                            android:prompt="@string/phone_number"
                            android:spinnerMode="dropdown"
                            android:theme="@style/Spinner" />

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/ethinicity"
                            style="@style/Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text15"
                            android:drawSelectorOnTop="true"
                            android:dropDownVerticalOffset="-53dp"
                            android:prompt="@string/phone_number"
                            android:spinnerMode="dropdown"
                            android:theme="@style/Spinner" />


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text15"
                            android:theme="@style/TextLabel"
                            app:hintTextAppearance="@style/MyAppearance">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/input_phoneno"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/phone_numbers"
                                android:inputType="phone"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/texts14"
                                android:theme="@style/MyEditText" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text15"
                            android:theme="@style/TextLabel"
                            app:hintTextAppearance="@style/MyAppearance">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/input_email_id"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/emails"
                                android:inputType="textEmailAddress"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/texts14"
                                android:theme="@style/MyEditText" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text15"
                            android:theme="@style/TextLabel"
                            app:hintTextAppearance="@style/MyAppearance"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/btn_text">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/input_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/item_password"
                                android:inputType="textPassword"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/texts14"
                                android:theme="@style/MyEditText" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text15"
                            android:theme="@style/TextLabel"
                            app:hintTextAppearance="@style/MyAppearance"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/btn_text">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/input_confirmpass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat_regular"
                                android:hint="@string/retype_password"
                                android:inputType="textPassword"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/texts14"
                                android:theme="@style/MyEditText" />

                        </android.support.design.widget.TextInputLayout>


                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="@dimen/text20"
                            android:gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/signup"
                                android:layout_width="@dimen/text150"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/text16"
                                android:layout_marginBottom="@dimen/text12"
                                android:background="@drawable/gradients"
                                android:elevation="@dimen/text8"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:padding="@dimen/text10">

                                <android.support.v7.widget.AppCompatTextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat_regular"
                                    android:text="@string/sigups"
                                    android:textColor="@color/btn_text"
                                    android:textSize="@dimen/texts18"
                                    android:textStyle="normal" />

                                <android.support.v7.widget.AppCompatImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/text10"
                                    android:layout_marginLeft="@dimen/text10"
                                    android:background="@drawable/ic_right_arrow" />
                            </LinearLayout>

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/login"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/text11"
                                android:fontFamily="@font/montserrat_regular"
                                android:padding="@dimen/text10"
                                android:text="@string/login2"
                                android:textColor="@color/skyblue"
                                android:textSize="@dimen/texts16" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <FrameLayout
                android:layout_width="@dimen/text80"
                android:layout_height="@dimen/text80"
                android:layout_below="@+id/subtitle"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle"
                android:elevation="@dimen/text3"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/user_profile_photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="@dimen/text10"
                    android:src="@drawable/registration_icon" />
            </FrameLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>